# discount-hub

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  vercel.json
.cursor/rules/: production-safety.mdc  stack-versions.mdc
.github/workflows/: ci.yml  tauri-build.yml
apps/mobile/: .env.example  README.md  discount-hub.apk.idsig
apps/mobile/src-tauri/: Cargo.toml  tauri.conf.json
apps/mobile/src-tauri/capabilities/: default.json
apps/mobile/src-tauri/src/: lib.rs  main.rs
apps/web/: .env.example  README.md  eslint.config.mjs  next.config.ts  package.json  prisma.config.ts  vitest.config.ts
apps/web/prisma/: backfill-invite-codes.ts  reset-all-user-passwords.ts  schema.prisma  seed-prod.ts  seed.ts
apps/web/src/: env.ts  middleware.ts  proxy.ts
apps/web/src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx
apps/web/src/components/: AndroidAppBanner.tsx  CheckinPrompt.tsx  ConsumerFooter.tsx  ConsumerNav.tsx  Countdown.tsx  (+11 more)
demo/: index.html  package.json
demo/src/: App.tsx  index.css
demo/src/components/: Countdown.tsx  CouponVerification.tsx  FakeQr.tsx  Layout.tsx  Login.tsx  Modal.tsx  PurchaseFlowDialog.tsx  ToastViewport.tsx
demo/src/contexts/: AuthContext.tsx  ToastContext.tsx
demo/src/pages/: CouponsPage.tsx  HomePage.tsx  MemberPage.tsx  ProfilePage.tsx  ScrollDetailPage.tsx
demo/src/utils/: appLinks.ts  format.ts  mockData.ts  pointsStore.ts
deploy/: deploy.sh  discount-hub-migrate.service  discount-hub-web.service
drawing/: production-prompt.md
(+123 files in other folders)
