[package]
name = "discount-hub-mobile"
version = "0.1.0"
description = "Discount Hub mobile shell powered by Tauri"
license = "AGPL-3.0"
edition = "2021"

[lib]
name = "discount_hub_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
url = "2"
